added first schema.sql

--- a/Scratch_paper_mhardy.ipynb
+++ b/Scratch_paper_mhardy.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import csv\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +387,7 @@
        "[3728 rows x 116 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +773,7 @@
        "[1097 rows x 116 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,6 +781,17 @@
    "source": [
     "clean_sale_df = sale_price_df.dropna()\n",
     "clean_sale_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export csv\n",
+    "file_path = Path(\"./resources_mhardy/Sale_Prices_City.csv/Sale_Prices_City_sample.csv\")\n",
+    "clean_sale_df.to_csv(file_path, index=False)"
    ]
   }
  ],
