adding mortgage, gas price, interest rate and unemployment data

--- a/Scratch_paper_mhardy.ipynb
+++ b/Scratch_paper_mhardy.ipynb
@@ -6853,9 +6853,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "mlenv",
    "language": "python",
-   "name": "pythondata"
+   "name": "mlenv"
   },
   "language_info": {
    "codemirror_mode": {
