--- a/CityZipCode.ipynb
+++ b/CityZipCode.ipynb
@@ -117,6 +117,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "56bf1c41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changing the zipcode of the corresponding city name \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e45c6733",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e5fbf98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5b03c7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5676c2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "e045f0db",
    "metadata": {},
