updating ML model notebook

--- a/FinalProject_MLModel_2ndSegment.ipynb
+++ b/FinalProject_MLModel_2ndSegment.ipynb
@@ -13,12 +13,12 @@
    "id": "43c4f920",
    "metadata": {},
    "source": [
-    "This project is about predicting housing prices across various regions based on market factors such as gas prices, unemployment rate, mortgage rates, interest rates, and inflation rates. We will be utilizing supervised machine learning models for this purpose."
+    "This project is about predicting housing prices across various regions/Zipcodes in the country based on various market factors such as gas prices, unemployment rate, mortgage rates, interest rates, and inflation rates. We will be utilizing supervised machine learning models for this purpose."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "98004aee",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "af510120",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
        "[5 rows x 953 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,28 +279,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "0fa39d0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "DATE                  object\n",
        "PRICE_PER_GALLON     float64\n",
        "UNEMPLOYMENT_RATE    float64\n",
+       "AVG_MORTGAGE_RATE    float64\n",
        "INTEREST_RATES       float64\n",
-       "INFLATION            float64\n",
-       "10001                float64\n",
        "                      ...   \n",
        "34228                float64\n",
        "18938                float64\n",
        "95223                float64\n",
        "19047                float64\n",
        "60081                float64\n",
-       "Length: 951, dtype: object"
+       "Length: 953, dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,6 +308,36 @@
    "source": [
     "# Check the data types of each column \n",
     "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5f347bdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "953"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check number of columns in the dataframe\n",
+    "len(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6955c5b",
+   "metadata": {},
+   "source": [
+    "There are a total of 953 columns, out of which 6 are independent variables and remaining 947 are the housing prices in various regions in the country denoted by different Zipcodes. The housing prices in each region is our dependent variable."
    ]
   },
   {
@@ -530,8 +560,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd342e2b",
+   "metadata": {},
+   "source": [
+    "### Multiple Linear Regression Model\n",
+    "Our problem statement involves predicting housing values. This problem can be solved by using a regression model. Multiple Linear Regression (MLR) is one of the important regression algorithms which models the linear relationship between a single dependent continuous variable and more than one independent variables.\n",
+    "Multiple regressions are based on the assumption that there is a linear relationship between both the dependent and independent variables. It also assumes no major correlation between the independent variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e3fecf1",
+   "metadata": {},
+   "source": [
+    "### Check for Linearity\n",
+    "In order for the MLR model to be applicable we want to check that a linear relationship exists between the dependent variable and the independent variables. This can be checked by using scatter plots."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "111100fd",
    "metadata": {},
    "outputs": [
@@ -544,13 +593,14 @@
     }
    ],
    "source": [
-    "# Enter the zipcode. Example: 10001 etc...\n",
+    "# Enter the zipcode to build the model. Example: 10001 etc. \n",
+    "# As Mentioned above, this model has 947 different zipcodes to choose from.\n",
     "region = input(\"Enter the 5 digit Zipcode: \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "e3fa9bbd",
    "metadata": {},
    "outputs": [
@@ -560,7 +610,7 @@
        "Text(0.5, 1.0, 'Inflation vs Housing')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -593,7 +643,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "094ade4e",
    "metadata": {},
@@ -613,8 +662,8 @@
     "### Feature Selection \n",
     "In our dataset, we have 5 input features (Gas Prices, Mortgage rates, Interest rates, Inflation and Unemployment rates) for our model. We are trying to visualize a correlation between these 5 features and the housing prices which is our target value in this machine learning model. \n",
     "\n",
-    "Based on the above scatter plots, we can see that Gas Prices and Unemployment Rates have a negative correlation with Housing Prices. Whereas the Interest Rates and Inflation (Consumer Price Index- CPI) have Positive correlation with Housing Prices. We can also see that Mortage rates do not correlate with Housing Prices. \n",
-    "Since Mortgage Rates and Housing Prices do not have linear relationship, in order to move forward with Multiple Linear Regression model, we decided to drop Mortage Rates feature from our dataset. "
+    "Based on the above scatter plots, we can see that Interest Rates and Inflation (Consumer Price Index - CPI) have a linear relationship with Housing Prices. The Gas Prices and Unemployment Rates also have a linear relationship with Housing Prices, but with a negatice slope, whihc means that housing prices decrease with increasing as prices and unemployment rates. We can also see that Mortage rates do not have a linear relationship with Housing Prices. \n",
+    "Since Mortgage Rates and Housing Prices do not have linear relationship, in order to move forward with MLR model, we decided to drop Mortage Rates feature from our dataset. "
    ]
   },
   {
@@ -1005,8 +1054,7 @@
    "id": "51e06ead",
    "metadata": {},
    "source": [
-    "### Multiple Linear Regression Model\n",
-    "Model choice: "
+    "### Performong the Multiple Linear Regression"
    ]
   },
   {
@@ -1036,6 +1084,14 @@
     "print(f\"Coefficients: {model.coef_}\")\n",
     "\n",
     "predictions = model.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aab74223",
+   "metadata": {},
+   "source": [
+    "### We will use statsmodel to generate comprehensive table with statistical info about our model"
    ]
   },
   {
@@ -1090,12 +1146,7 @@
     }
    ],
    "source": [
-    "# prediction with sklearn\n",
-    "# New_Inflation = 300\n",
-    "# New_Gas_Price = 7 \n",
-    "# print ('Predicted Housing Price: \\n', model.predict([[New_Inflation ,New_Gas_Price]]))\n",
-    "\n",
-    "# with statsmodels\n",
+    "# Statistical info with statsmodels\n",
     "X_train = sm.add_constant(X_train) # adding a constant\n",
     " \n",
     "model_2 = sm.OLS(y_train, X_train).fit()\n",
@@ -1106,10 +1157,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68d09fc0",
+   "metadata": {},
+   "source": [
+    "Notice that the coefficients captured in this table match with the coefficients generated by sklearn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "526067d0",
    "metadata": {},
    "source": [
-    "## GUI "
+    "## Graphical User Interface (GUI) \n",
+    "Now creating a GUI that will allow users to input the independent variables in order to get the predicted result"
    ]
   },
   {
@@ -1231,6 +1291,14 @@
     "ax4.set_title('Inflation (CPI) Vs. Housing Price')\n",
     "\n",
     "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7361dee1",
+   "metadata": {},
+   "source": [
+    "Once you run the code, you’ll see this GUI, which includes the output generated by sklearn and the scatter diagrams for the selected Zipcode."
    ]
   },
   {
